[project]
name = "Biopython_learning"
version = "0.1.0"
description = ""
authors = [{ name="Raul Gomez", email="rgomez@tec.mx" }]
dependencies = [
  "numpy",
  "matplotlib",
  "biopython"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
